[package]
name = "datastore"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
postcard = "1.0"
#surrealdb = {version ="2.2.1", features = ["kv-mem"]}
influxdb_rs = "0.2"
tokio = { version = "1", features = ["full"] }
protocol = { path = "../protocol" }
url = "2.5.4"
chrono = "0.4.40"

[build]
target = "x86_64-unknown-linux-gnu"
